2008-03-19  Brian Warner  <warner@lothar.com>

	* buildbot/scheduler.py (Triggerable): merge Dustin's patch: add
	"Triggerable" Schedulers, to start builds at specific phases of
	other builds rather than in response to source code changes or
	periodic timers. These phases are marked by "Trigger" steps, which
	are configured with a list of Triggerable schedulers that they
	should fire. Closes #56.
	* buildbot/steps/trigger.py (Trigger): buildstep to match
	* buildbot/test/test_run.py (Triggers): test for it
	* docs/buildbot.texinfo (Build Dependencies): document it
	(Triggering Schedulers): same

2008-03-18  Brian Warner  <warner@lothar.com>

	* buildbot/interfaces.py (ISourceStamp.getAbsoluteSourceStamp):
	merge patch from Dustin to add "absolute source stamps": just like
	normal SourceStamp instances except that they have a .revision
	attribute copied out of the got_revision property of a build. If
	the input SourceStamp says .revision=None (i.e. HEAD), and the
	build is done when the tree is at r1234, then the "absolute"
	SourceStamp should have .revision=1234 .
	* buildbot/sourcestamp.py (SourceStamp.getAbsoluteSourceStamp): same
	* buildbot/status/builder.py (BuildStatus.getSourceStamp): add
	absolute= argument

	* buildbot/test/runutils.py (SetTestFlagStep): test utility class,
	adding 'flags' that can be set by specific buildsteps. This makes
	it easier to write tests that detect whether certain buildsteps
	have been reached or not. Patch by Dustin Mitchell.
	* buildbot/test/test_run.py (TestFlag.testTestFlag): test for it.

	* buildbot/buildslave.py (BuildSlave.__repr__): protect against
	.botmaster being empty, to allow pretty-printing of configuration
	files before the twisted reactor starts. Patch from Dustin
	Mitchell.

	* docs/buildbot.texinfo (Shutdown): make it clear that 'buildbot
	reconfig' (which uses SIGHUP) doesn't work on windows. Acknowledge
	the occasional failures in reconfig (and suggest 'buildbot
	restart' as a fallback). Closes #105.
